Fix issues from Sonarqube analysis