@@ -42,7 +42,7 @@ public class UsedAxisPK extends WAPrimaryKey implements Serializable {
   }
 
   public UsedAxisPK(int id) {
-    super((new Integer(id)).toString());
+    super((Integer.valueOf(id)).toString());
   }
 
   /**
@@ -63,6 +63,7 @@ public class UsedAxisPK extends WAPrimaryKey implements Serializable {
    * Return the object root table name
    * @return the root table name of the object
    */
+  @Override
   public String getRootTableName() {
     return "Pdc";
   }
@@ -71,6 +72,7 @@ public class UsedAxisPK extends WAPrimaryKey implements Serializable {
    * Return the object table name
    * @return the table name of the object
    */
+  @Override
   public String getTableName() {
     return "SB_Pdc_UsedAxis";
   }
@@ -80,6 +82,7 @@ public class UsedAxisPK extends WAPrimaryKey implements Serializable {
    * @return true if other is equals to this object
    * @param other the object to compare to this NodePK
    */
+  @Override
   public boolean equals(Object other) {
     if (!(other instanceof UsedAxisPK))
       return false;
@@ -93,6 +96,7 @@ public class UsedAxisPK extends WAPrimaryKey implements Serializable {
    * Returns a hash code for the key
    * @return A hash code for this object
    */
+  @Override
   public int hashCode() {
     return toString().hashCode();
   }
